--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,6 +14,9 @@
     "axios": "^1.7.2",
     "lucide-react": "^0.399.0",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.13.0",
+    "react-datepicker": "^7.2.0",
+    "react-datetime": "^3.2.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.0",
     "react-hot-toast": "^2.4.1",
