Charts plotted and the frontend created. Some Calculator sections created. Also a few bugs fixed.

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "personal-finance-dashboard",
+  "name": "dashboard",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,22 +12,29 @@
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
     "axios": "^1.7.2",
-    "lucide-react": "^0.399.0",
+    "chart.js": "^4.4.3",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
+    "lucide-react": "^0.396.0",
     "react": "^18.3.1",
     "react-big-calendar": "^1.13.0",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.2.0",
     "react-datetime": "^3.2.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.0",
     "react-hot-toast": "^2.4.1",
-    "react-router-dom": "^6.24.0"
+    "react-router-dom": "^6.23.1",
+    "TagCloud": "^2.5.0",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
-    "daisyui": "^4.12.10",
+    "daisyui": "^4.12.2",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
